Fix buttons spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .btn-success{
-    margin: 0 5px 0 5px;
+    margin: 3px 5px 3px 5px;
 }
 
 .img-container{
